--- a/media-server-chart/templates/_service.yaml
+++ b/media-server-chart/templates/_service.yaml
@@ -14,7 +14,9 @@ spec:
     - name: {{ $port.name }}
       port: {{ $port.port }}
       targetPort: {{ $port.targetPort }}
+      {{ if $port.protocol }}
       protocol: {{ $port.protocol }}
+      {{ end }}
       nodePort: {{ $port.nodePort }}
     {{- end }}    
 
