--- a/media-server-chart/charts/jellyseerr-chart/values.yaml
+++ b/media-server-chart/charts/jellyseerr-chart/values.yaml
@@ -7,8 +7,11 @@ containerPorts:
     nodePort: 30505
     protocol: TCP
 ingress:
-  enabled: false
+  enabled: true
   servicePort: 5055
+gluetun:
+  enabled: false
+  volumeName: media
 envVars:
   TZ: America/Toronto
 existingVolumes:
