--- a/media-server-chart/charts/prowlarr-chart/values.yaml
+++ b/media-server-chart/charts/prowlarr-chart/values.yaml
@@ -7,11 +7,10 @@ containerPorts:
     nodePort: 30969
     protocol: TCP
 ingress:
-  enabled: true
+  enabled: false
   servicePort: 9696
 gluetun:
   enabled: false
-  volumeName: media
 envVars:
   TZ: America/Toronto
   PUID: 1000
