--- a/media-server-chart/charts/bazarr-chart/values.yaml
+++ b/media-server-chart/charts/bazarr-chart/values.yaml
@@ -7,11 +7,10 @@ containerPorts:
     nodePort: 30676
     protocol: TCP
 ingress:
-  enabled: true
+  enabled: false
   servicePort: 6767
 gluetun:
   enabled: false
-  volumeName: media
 envVars:
   TZ: America/Toronto
   PUID: 1000
