--- a/media-server-chart/charts/radarr-chart/values.yaml
+++ b/media-server-chart/charts/radarr-chart/values.yaml
@@ -7,11 +7,10 @@ containerPorts:
     nodePort: 30787
     protocol: TCP
 ingress:
-  enabled: true
+  enabled: false
   servicePort: 7878
 gluetun:
   enabled: false
-  volumeName: media
 envVars:
   TZ: America/Toronto
   PUID: 1000
